# common-go

./: LICENSE  README.md  Taskfile.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.common-cli/.config/: variables.json
.common-library/.config/: variables.json
.config/: package-lock.json
.config/docs/: Taskfile.yml  package.json
.gitlab/ci/propagate/: projects.gitlab-ci.yml
_generated_/cli/: package.json.liquid
_generated_/cli/.config/: goreleaser-darwin.yml.liquid  goreleaser-linux.yml.liquid  goreleaser.yml.liquid  variables.json
_generated_/common/: .gitlab-ci.yml  package.json.liquid
_generated_/common/.config/: variables.json
files-cli/: .gitlab-ci.yml
files-library/: .gitlab-ci.yml
local/: package-lock.json
local/slim/: exe.txt  install.txt
project/: .gitlab-ci.yml  package.json.liquid
project-cli/: package.json.liquid
project-cli/.config/: goreleaser-darwin.yml.liquid  goreleaser-linux.yml.liquid  goreleaser.yml  goreleaser.yml.liquid  variables.json
project-library/: package.json.liquid
project/.config/: variables.json
